--- a/packages/app-staking/package.json
+++ b/packages/app-staking/package.json
@@ -17,6 +17,7 @@
     "@polkadot/ui-keyring": "^0.19.30",
     "@polkadot/ui-react": "^0.19.30",
     "@polkadot/ui-react-rx": "^0.19.30",
-    "@polkadot/util-keyring": "^0.28.1"
+    "@polkadot/util-keyring": "^0.28.1",
+    "recharts": "^1.1.0"
   }
 }
